--- a/.gitignore
+++ b/.gitignore
@@ -250,3 +250,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 
 # End of https://www.toptal.com/developers/gitignore/api/python,flask
+TPIntegrador/db/savedScores.json
